crates/brokkr-cli/src/tui/snapshots/fleet_220x50.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌dashboard──────────────────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                                                                ││LANDING PR #420: the fleet lists who must act first                                            │"
"│! stale                               LANDING PR #420: the fleet lists who must act first          168h07m landi…9d8c7b6a││landing-pr-420-of-the-fleet-9d8c7b6a                                                           │"
"│                                      stale: no event since 116h07m; resume or conclude                                  ││stale · land · 168h07m                                                                         │"
"│? quarantined does not fold           A journal that does not fold                                 7m03s   journ…7f8e9d0c││                                                                                               │"
"│                                      quarantined: conclude or inspect                                                   ││WHAT IT NEEDS                                                                                  │"
"│● parked      UNVERIFIED-SE… high     #362 cargo exemption                                         7m03s   cargo…5b6c7d8e││verdict   — · residual none                                                                    │"
"│running                                                                                                                  ││rule      —                                                                                    │"
"│◐ review                              #403 macOS fix, round 9: PR #483's test (macos-latest) job…  7m03s   fix-4…3c1f9a02││seat      —                                                                                    │"
"│◐ triage                              0065 rebuild unit 20                                         7m03s   0065-…1c2d3e4f││                                                                                               │"
"│last 24h                                                                                                                 ││PATH                                                                                           │"
"│✓ shipped     COMPLETE                Landing 5 of the fleet view                                  7m03s   landi…6e7f8a9b││—                                                                                              │"
"│✓ shipped     COMPLETE       low      Landing 4 of the fleet view                                  7m03s   landi…2a3b4c5d││                                                                                               │"
"│✗ stopped     FAIL-EXHAUSTED          0065 rebuild unit 19                                         7m03s   0065-…8c9d0e1f││SEATS                                                                                          │"
"│older                                                                                                                    ││—                                                                                              │"
"│✗ stopped     BLOCKED                 Unit 18 of the rebuild: the smith hit a permission wall      48h00m  unit-…4e5f6a7b││                                                                                               │"
"│✓ shipped     COMPLETE                Landing 2 of the fleet view                                  48h00m  landi…0a1b2c3d││WAY OUT                                                                                        │"
"│                                                                                                                         ││stale     no event since 116h07m, past the 3h bound: an attempt's 2h deadline and a 1h margin  │"
"│                                                                                                                         ││way out   brokkr resume --run landing-pr-420-of-the-fleet-9d8c7b6a --bundle <its-bundle>       │"
"│                                                                                                                         ││          drives it again under its pinned bundle (or --recipe <name>);                        │"
"│                                                                                                                         ││          or brokkr conclude --run landing-pr-420-of-the-fleet-9d8c7b6a --reason <why> closes  │"
"│                                                                                                                         ││it                                                                                             │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││COMMISSION                                                                                     │"
"│                                                                                                                         ││LANDING PR #420: the fleet lists who must act first                                            │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"│                                                                                                                         ││                                                                                               │"
"└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└───────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                                                                                                                                                                        "
"↑↓/jk move · Enter open run · → expand · Tab dashboard · d hide dashboard · f findings ≥257 · c commission · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit                                           "
