crates/brokkr-cli/src/tui/snapshots/fleet_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│? quarantined does not fold           a run whose…      —       run-unfoldable│"
"│                                      quarantined:…                           │"
"│running                                                                       │"
"│◐ design                              one derivation,…  6m58s   run-7         │"
"│◐ design                              an older feature  7m03s   run-old       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                            "
"Enter open run · d dashboard ≥195 · f live ≥257 · a all runs · / filter · ? help"
