crates/brokkr-cli/src/tui/snapshots/fleet_filtered_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│? quarantined does not fold           a run whose journ —       run-unfoldable│"
"│running                                                                       │"
"│▶ design                              an older feature  7m03s   run-old       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                            "
"/old▏ filtering · Enter keep · Esc clear · ⌫ delete                             "
